--- a/.ultra/tasks/tasks.json
+++ b/.ultra/tasks/tasks.json
@@ -77,10 +77,11 @@
       "priority": "P0",
       "dependencies": ["4"],
       "estimated_days": 3,
-      "status": "in_progress",
+      "status": "completed",
       "type": "feature",
       "trace_to": "specs/architecture.md#qlib-deep-fork",
-      "started_at": "2025-12-10T01:00:00"
+      "started_at": "2025-12-10T01:00:00",
+      "completed_at": "2025-12-10T01:30:00"
     },
     {
       "id": "6",
@@ -468,9 +469,9 @@
     }
   ],
   "metadata": {
-    "last_updated": "2025-12-09",
+    "last_updated": "2025-12-10",
     "total_tasks": 38,
-    "completed_tasks": 5,
+    "completed_tasks": 6,
     "in_progress_tasks": 0,
     "priority_distribution": {
       "P0": 27,
@@ -488,9 +489,9 @@
   },
   "stats": {
     "total": 38,
-    "completed": 5,
+    "completed": 6,
     "in_progress": 0,
-    "pending": 33,
+    "pending": 32,
     "blocked": 0
   }
 }
