--- a/.ultra/tasks/tasks.json
+++ b/.ultra/tasks/tasks.json
@@ -91,10 +91,11 @@
       "priority": "P0",
       "dependencies": ["0"],
       "estimated_days": 2,
-      "status": "in_progress",
+      "status": "completed",
       "type": "feature",
       "trace_to": "specs/architecture.md#llm-provider-strategy",
-      "started_at": "2025-12-10T01:45:00"
+      "started_at": "2025-12-10T01:45:00",
+      "completed_at": "2025-12-10T02:15:00"
     },
     {
       "id": "7",
@@ -472,7 +473,7 @@
   "metadata": {
     "last_updated": "2025-12-10",
     "total_tasks": 38,
-    "completed_tasks": 6,
+    "completed_tasks": 7,
     "in_progress_tasks": 0,
     "priority_distribution": {
       "P0": 27,
@@ -490,9 +491,9 @@
   },
   "stats": {
     "total": 38,
-    "completed": 6,
+    "completed": 7,
     "in_progress": 0,
-    "pending": 32,
+    "pending": 31,
     "blocked": 0
   }
 }
