--- a/.ultra/tasks/tasks.json
+++ b/.ultra/tasks/tasks.json
@@ -161,10 +161,11 @@
       "priority": "P0",
       "dependencies": ["0"],
       "estimated_days": 3,
-      "status": "in_progress",
+      "status": "completed",
       "type": "feature",
       "trace_to": "specs/product.md#user-story-22",
-      "started_at": "2025-12-10T06:00:00"
+      "started_at": "2025-12-10T06:00:00",
+      "completed_at": "2025-12-10T06:30:00"
     },
     {
       "id": "12",
@@ -482,7 +483,7 @@
   "metadata": {
     "last_updated": "2025-12-10",
     "total_tasks": 38,
-    "completed_tasks": 11,
+    "completed_tasks": 12,
     "in_progress_tasks": 0,
     "priority_distribution": {
       "P0": 27,
