--- a/.ultra/tasks/tasks.json
+++ b/.ultra/tasks/tasks.json
@@ -175,10 +175,11 @@
       "priority": "P0",
       "dependencies": ["10"],
       "estimated_days": 3,
-      "status": "in_progress",
+      "status": "completed",
       "type": "feature",
       "trace_to": "specs/product.md#user-story-23",
-      "started_at": "2025-12-10T07:00:00"
+      "started_at": "2025-12-10T07:00:00",
+      "completed_at": "2025-12-10T07:30:00"
     },
     {
       "id": "13",
@@ -484,7 +485,7 @@
   "metadata": {
     "last_updated": "2025-12-10",
     "total_tasks": 38,
-    "completed_tasks": 12,
+    "completed_tasks": 13,
     "in_progress_tasks": 0,
     "priority_distribution": {
       "P0": 27,
