--- a/.ultra/tasks/tasks.json
+++ b/.ultra/tasks/tasks.json
@@ -413,10 +413,11 @@
       "priority": "P1",
       "dependencies": ["27", "24"],
       "estimated_days": 2,
-      "status": "in_progress",
+      "status": "completed",
       "type": "feature",
       "trace_to": "specs/architecture.md#dashboard-pages",
-      "started_at": "2025-12-10T20:15:00"
+      "started_at": "2025-12-10T20:15:00",
+      "completed_at": "2025-12-10T20:45:00"
     },
     {
       "id": "30",
@@ -536,8 +537,8 @@
   },
   "stats": {
     "total": 38,
-    "completed": 29,
-    "in_progress": 1,
+    "completed": 30,
+    "in_progress": 0,
     "pending": 8,
     "blocked": 0
   }
