--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and fill in your values
 
 # Database
-DATABASE_URL=literal:your_database_url_here
+DATABASE_URL=your_database_url_here
 REDIS_URL=redis://localhost:6379/0
 QDRANT_URL=http://localhost:6333
 
@@ -24,7 +24,7 @@ DEBUG=true
 LOG_LEVEL=INFO
 
 # Celery
-CELERY_BROKER_URL=literal:redis://localhost:6379/0
+CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/1
 
 # Exchange API (Optional - for live trading)
