--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "restrictedpython>=7.0",
     "python-jose[cryptography]>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
+    "PyJWT>=2.8.0",
 
     # Utilities
     "httpx>=0.27.0",
